--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,7 +58,7 @@ chrono = { version = "0.4", features = ["serde"] }
 
 # Tower middleware
 tower = "0.5"
-tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }
+tower-http = { version = "0.6", features = ["cors", "trace", "compression-full", "set-header"] }
 
 # Auth & security
 jsonwebtoken = "9.2"
