fix(security): address critical security vulnerabilities and bugs
CRITICAL SECURITY FIXES:
- Fix authentication bypass in hooks.server.ts (remove '/' from publicRoutes)
- Remove token storage from localStorage (use httpOnly cookies only)
- Deprecate insecure XOR token encryption
- Fix open redirect vulnerability in OAuth callback
- Implement PKCE flow with secure cookie storage for code_verifier

BUG FIXES:
- Add refresh endpoints to isAuthEndpoint check in API client
- Fix npm test script syntax error
- Fix RegisterForm type to include fullName field
- Remove duplicate type definitions in validation/auth.ts
- Fix double URL encoding in handleAuthError

All issues identified in PR review by Greptile and CodeRabbit have been addressed.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
 		"lint:fix": "prettier --write . && eslint . --fix",
 		"validate-svelte": "echo '✅ Remember to use Svelte 5 runes! Check .svelte-instructions.md'",
 		"test:unit": "vitest",
-		"test": "test:unit -- --run && test:e2e",
+		"test": "vitest run && playwright test",
 		"test:e2e": "playwright test"
 	},
 	"devDependencies": {
