--- a/services/inventory_service/api/Cargo.toml
+++ b/services/inventory_service/api/Cargo.toml
@@ -49,6 +49,7 @@ validator = {workspace = true}
 [dev-dependencies]
 # Test dependencies
 fake = {workspace = true}
+http-body-util = "0.1"
 mockall = {workspace = true}
 proptest = {workspace = true}
 tokio-test = "0.4"
