fix(security): upgrade @sveltejs/kit 2.47.1 → 2.49.2
Addresses multiple CVEs identified in PR #128 code review:

- CVE-2024-23641: DoS via GET/HEAD requests with body (Medium)
- CVE-2024-53261: Dev-mode 404 page XSS (Medium)
- CVE-2025-32388: XSS from unsanitized search parameter names (High)

Changes:
- Upgraded @sveltejs/kit from 2.47.1 to 2.49.2
- Updated .env.example with PUBLIC_USER_SERVICE_URL
- Updated task file with progress

Validation:
- svelte-check: 0 errors
- Production build: succeeds

Pre-existing issues (not introduced by this upgrade):
- Lint errors in auth code (unused vars, any types)
- 3 test failures (URL encoding expectations)

TaskID: V1_MVP/08_Frontend/8.1_Project_Setup/task_08.01.02

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -8,3 +8,6 @@ PUBLIC_APP_ENV=development
 PUBLIC_KANIDM_CLIENT_ID=anthill-frontend
 PUBLIC_KANIDM_ISSUER_URL=https://idm.example.com
 PUBLIC_KANIDM_REDIRECT_URI=http://localhost:5173/api/v1/auth/oauth/callback
+
+# Backend User Service (OAuth2 proxy)
+PUBLIC_USER_SERVICE_URL=http://localhost:8000
